[package]
name = "grrs"
version = "0.1.0"
authors = ["Ulric Kouassi <kouassi.ulric@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A tool to search files"
homepage = "https://github.com/kinyaoo/grrs"
repository = "https://github.com/kinyaoo/grrs"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
failure = "0.1.7"
exitfailure = "0.5.1"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
tempfile = "3"
